[update] Finalize sponsors page, fix CSS throughout

--- a/server/views/partials/sponsors-list.pug
+++ b/server/views/partials/sponsors-list.pug
@@ -1,25 +1,29 @@
 .container
   h2.section-title.white Our sponsoring partners
   ul.sponsor-list.sponsor-list-small
-    // JJU
+    //- // JJU
+    //- li.sponsor-list-item
+    //-   a(href='http://www.jj.ac.kr/')
+    //-     img.sponsor-logo(src='/img/sponsors/jju-logo.png')
+    //- // KOTESOL
+    //- //
+    //-   <li class="sponsor-list-item">
+    //-   <a href="https://koreatesol.org/"><img class="sponsor-logo" src="/img/sponsors/kotesol-logo.png"></a>
+    //-   </li>
+    //- // Kidari Bookstore
+    //- li.sponsor-list-item
+    //-   //- a(href='http://naver.me/xi0JL0WB')
+    //-   img.sponsor-logo(src='/img/sponsors/kidari.jpg')
+    // Yega
     li.sponsor-list-item
-      a(href='http://www.jj.ac.kr/')
-        img.sponsor-logo(src='/img/sponsors/jju-logo.png')
-    // KOTESOL
-    //
-      <li class="sponsor-list-item">
-      <a href="https://koreatesol.org/"><img class="sponsor-logo" src="/img/sponsors/kotesol-logo.png"></a>
-      </li>
-    // TOP Bookstore
+      //- a(href='http://naver.me/xi0JL0WB')
+      img.sponsor-logo(src='/img/sponsors/yega-logo.png')
+    // Mo Fac Story
     li.sponsor-list-item
-      a(href='http://naver.me/xi0JL0WB')
-        img.sponsor-logo(src='/img/sponsors/top-logo.png')
-    // Lemon Tree Cafe
+      //- a(href='http://naver.me/5bbqCFuG')
+      img.sponsor-logo(src='/img/sponsors/mo-fac-story.png' style='filter: invert(1)')
+    // Jinmi & Jinmi
     li.sponsor-list-item
-      a(href='http://naver.me/5bbqCFuG')
-        img.sponsor-logo(src='/img/sponsors/lemontree-logo.png')
-    // English Garden
-    li.sponsor-list-item
-      a(href='http://naver.me/xdodjYGu')
-        img.sponsor-logo(src='/img/sponsors/english-garden-logo.png')
+      //- a(href='http://naver.me/xdodjYGu')
+      img.sponsor-logo(src='/img/sponsors/jinmi-n-jinmi.png')
   a.page-button.sponsor-button(href='/sponsors', style='text-align: center;') View all sponsors &rarr;
