--- a/server/views/sponsors.pug
+++ b/server/views/sponsors.pug
@@ -30,72 +30,76 @@ block content
           h5.sponsor-name KOTESOL
           p.sponsor-description
             | KOTESOL is a non-profit, professional organization that seeks to assist teachers in self-development and improve English Language Teaching in Korea.
-    //- .container.sponsor-list-container
-    //-   h4.sponsor-section-title Our Sponsors
-    //-   // GOLD Sponsors (200,000)
-    //-   h5.sponsor-level-title Gold
-    //-   ul.sponsor-list
-    //-     // TOP Bookstore
-    //-     li.sponsor-list-item.gold-sponsor
-    //-       a(href='http://naver.me/xi0JL0WB')
-    //-         img.sponsor-logo(src='/img/sponsors/top-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name TOP Bookstore
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/xi0JL0WB') 전주시 완산구 동문길 110
-    //-   // SILVER Sponsors (100,000)
-    //-   h5.sponsor-level-title Silver
-    //-   ul.sponsor-list
-    //-     // Tacocina
-    //-     li.sponsor-list-item.silver-sponsor
-    //-       a(href='https://www.facebook.com/Tacocina-%ED%83%80%EC%BD%94%EC%94%A8%EB%82%98-230582780692767/')
-    //-         img.sponsor-logo(src='/img/sponsors/tacocina-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name Tacocina
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/5vAEJdag') 전주시 완산구 효자동3가 1534-3
-    //-     // Lemon Tree Cafe
-    //-     li.sponsor-list-item.silver-sponsor
-    //-       a(href='http://naver.me/5bbqCFuG')
-    //-         img.sponsor-logo(src='/img/sponsors/lemontree-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name Lemon Tree Cafe
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/5bbqCFuG') 전주시 완산구 전라감영로 75
-    //-     // Cambridge University Press
-    //-     li.sponsor-list-item.silver-sponsor
-    //-       a(href='http://naver.me/5bbqCFuG')
-    //-         img.sponsor-logo(src='/img/sponsors/cambridge-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name Cambridge University Press
-    //-         // <small class="sponsor-address"><a href="http://naver.me/5bbqCFuG">전주시 완산구 전라감영로 75</a></small>
-    //-   // BRONZE Sponsors (50,000)
-    //-   h5.sponsor-level-title Bronze
-    //-   ul.sponsor-list
-    //-     // The Liter Coffee
-    //-     li.sponsor-list-item.bronze-sponsor
-    //-       a(href='http://www.theliter.co.kr/')
-    //-         img.sponsor-logo(src='/img/sponsors/liter-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name The Liter Coffee
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/5cH9nbQC') 전주시 완산구 유연로308
-    //-     // Yega Restaurant
-    //-     li.sponsor-list-item.bronze-sponsor
-    //-       a(href='http://naver.me/5nM2hnF3')
-    //-         img.sponsor-logo(src='/img/sponsors/yega-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name Yega Restaurant
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/5nM2hnF3') 전북 완주군 구이면 모악산길 112
-    //-     // English Garden
-    //-     li.sponsor-list-item.bronze-sponsor
-    //-       a(href='http://naver.me/xdodjYGu')
-    //-         img.sponsor-logo(src='/img/sponsors/english-garden-logo.png')
-    //-       .sponsor-meta
-    //-         h5.sponsor-name English Garden
-    //-         small.sponsor-address
-    //-           a(href='http://naver.me/xdodjYGu') 전주시 완산구 화산천변 3길 4-3
+    .container.sponsor-list-container
+      h4.sponsor-section-title Our Sponsors
+      // GOLD Sponsors (200,000)
+      h5.sponsor-level-title Gold
+      ul.sponsor-list
+        // Kidari English Bookstore
+        li.sponsor-list-item.gold-sponsor
+          a(href='http://www.ikidari.co.kr/')
+            img.sponsor-logo(src='/img/sponsors/kidari.jpg')
+          .sponsor-meta
+            h5.sponsor-name Kidari English Bookstore
+            small.sponsor-address
+              //- a(href='http://naver.me/xi0JL0WB') 
+              | 전주시 완산구 중화산동 화산천변로 9
+      //-   // SILVER Sponsors (100,000)
+      //-   h5.sponsor-level-title Silver
+      //-   ul.sponsor-list
+      //-     // Tacocina
+      //-     li.sponsor-list-item.silver-sponsor
+      //-       a(href='https://www.facebook.com/Tacocina-%ED%83%80%EC%BD%94%EC%94%A8%EB%82%98-230582780692767/')
+      //-         img.sponsor-logo(src='/img/sponsors/tacocina-logo.png')
+      //-       .sponsor-meta
+      //-         h5.sponsor-name Tacocina
+      //-         small.sponsor-address
+      //-           a(href='http://naver.me/5vAEJdag') 전주시 완산구 효자동3가 1534-3
+      //-     // Lemon Tree Cafe
+      //-     li.sponsor-list-item.silver-sponsor
+      //-       a(href='http://naver.me/5bbqCFuG')
+      //-         img.sponsor-logo(src='/img/sponsors/lemontree-logo.png')
+      //-       .sponsor-meta
+      //-         h5.sponsor-name Lemon Tree Cafe
+      //-         small.sponsor-address
+      //-           a(href='http://naver.me/5bbqCFuG') 전주시 완산구 전라감영로 75
+      //-     // Cambridge University Press
+      //-     li.sponsor-list-item.silver-sponsor
+      //-       a(href='http://naver.me/5bbqCFuG')
+      //-         img.sponsor-logo(src='/img/sponsors/cambridge-logo.png')
+      //-       .sponsor-meta
+      //-         h5.sponsor-name Cambridge University Press
+      //-         // <small class="sponsor-address"><a href="http://naver.me/5bbqCFuG">전주시 완산구 전라감영로 75</a></small>
+      // BRONZE Sponsors (50,000)
+      h5.sponsor-level-title Bronze
+      ul.sponsor-list
+        // Yega Restaurant (50,000)
+        li.sponsor-list-item.bronze-sponsor
+          a(href='http://naver.me/5nM2hnF3')
+            img.sponsor-logo(src='/img/sponsors/yega-logo.png')
+          .sponsor-meta
+            h5.sponsor-name Yega Restaurant
+            small.sponsor-address
+              //- a(href='http://naver.me/5nM2hnF3') 
+              | 완주군 구이면 모악산길 112
+        // Mo Fac Story (30,000)
+        li.sponsor-list-item.bronze-sponsor
+          a(href='http://naver.me/xdodjYGu')
+            img.sponsor-logo(src='/img/sponsors/mo-fac-story.png' style='max-width: 200px')
+          .sponsor-meta
+            h5.sponsor-name Mo Fac Story
+            small.sponsor-address
+              //- a(href='http://naver.me/xdodjYGu') 
+              | 전주시 완산구 백마산길 10
+        // Jinmi & Jinmi (20,000)
+        li.sponsor-list-item.bronze-sponsor
+          a(href='http://www.theliter.co.kr/')
+            img.sponsor-logo(src='/img/sponsors/jinmi-n-jinmi.png')
+          .sponsor-meta
+            h5.sponsor-name Jinmi &amp; Jinmi
+            small.sponsor-address
+              //- a(href='http://naver.me/5cH9nbQC') 
+              | 전주시 완산구 백마산길 19
     //-     // March Rabbit
     //-     li.sponsor-list-item.bronze-sponsor
     //-       a(href='http://marchrabbit.co.kr/')
