--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -15,6 +15,7 @@ block content
               p.ticket-price
                 span.krw &#x20A9;
                 | 30,000
+              p.fineprint * Pre-registration 25,000
             .explanation
               p Full access to the conference, networking opportunities, and the after party.
             .benefits
@@ -31,17 +32,18 @@ block content
                   | After party in 
                   a(href='/location#shinsikaji') Shinsikaji
             .buy
-              p.center Pre-registration opening soon
+              p.center Pre-register now!
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
+                a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
         li.center
           .ticket
             .price
-              p.ticket-type KOTESOL Member*
+              p.ticket-type KOTESOL Member
               p.ticket-price
                 span.krw &#x20A9;
                 | 20,000
-              p.fineprint *Students (10,000)
+              p.fineprint * Pre-registration (15,000)
+              p.fineprint * Students (10,000)
             .explanation
               p
                 | Full access to the conference, networking opportunities, the after party, as well as all KOTESOL 
@@ -90,26 +92,26 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Pre-registration opening soon
+              p.center Pre-register now!
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
+                a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
         li.center
           .ticket
             .price
-              p.ticket-type New Membership*
-              p.ticket-price.free FREE
-              p.fineprint
-                | *
+              p.ticket-type Groups (5+)
+              p.ticket-price.free 
                 span.krw &#x20A9;
-                | 50,000/year
+                | 20,000
+              p.fineprint
+                | * No onsite group registration
             .explanation
               p
                 | Full access to the conference, networking opportunities, the after party, as well as all KOTESOL 
                 a(href='https://koreatesol.org/content/member-benefits') membership benefits
-                |  - 
-                em and
-                |  a nifty printed 
-                strong conference booklet.
+                //- |  - 
+                //- em and
+                //- |  a nifty printed 
+                //- strong conference booklet.
                 //- a(href='') conference booklet.
             .benefits
               p.benefit-title
@@ -125,10 +127,10 @@ block content
                   | After party in 
                   a(href='/location#shinsikaji') Shinsikaji
                 li.benefit-item Member&apos;s discount to this &amp; other nationwide KOTESOL events
-                li.benefit-item.bonus
-                  | A 
-                  em printed
-                  |  conference booklet
+                //- li.benefit-item.bonus
+                //-   | A 
+                //-   em printed
+                //-   |  conference booklet
                 li.benefit-item
                   | Access to 3 KOTESOL 
                   a(href='https://koreatesol.org/publications') publications
@@ -158,6 +160,6 @@ block content
                   a(href='https://koreatesol.org/content/member-benefits') many more
                   | !
             .buy
-              p.center Pre-registration opening soon
+              p.center Pre-register now!
               p.center
-                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Questions?
+                a.page-button.button-inverse.button(href='https://koreatesol.org/content/2019-national-conference-pre-registration') Register
