--- a/server/views/partials/schedule-table.pug
+++ b/server/views/partials/schedule-table.pug
@@ -5,6 +5,33 @@
   //- .conference-schedule.container.small
   if pageId !== 'schedule'
     h2.page-section-title Conference Schedule
+
+  div.poster-section
+    .poster
+      p.poster-note Poster
+      p.schedule-session
+        a(href='/speakers/Ji-young_Suh') Developing an integrated ESP Material for Cabin Crew
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Ji-young Suh
+    .poster
+      p.poster-note Poster
+      p.schedule-session
+        a(href='/speakers/Shufang_Wang') Motivating students through self-determination theory and the 5Ts framework 
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Shufang Wang
+    .poster
+      p.poster-note Poster
+      p.schedule-session
+        a(href='/speakers/Ju-yeon_Kim') The relationship between reading motivation and comprehension for EFL students 
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Ju-yeon Kim
+    .poster
+      p.poster-note Poster
+      p.schedule-session
+        a(href='/speakers/Sunhee_Ko') Exploring the Effects of Drama Techniques on Korean Middle School English Learners’ Motivation 
+          i.fas.fa-external-link-alt
+      p.schedule-speaker Sunhee Ko
+
   table.schedule-section
     tr.schedule-header
       th.schedule-time Time
@@ -148,9 +175,9 @@
     tr.room1
       td.schedule-track Highlighted
       td.schedule-session
-        a(href='/speakers/Art_Mesa') People of Color SIG 
+        a(href='/speakers/Nathalie_Calderon') Actively Incorporating Race Visibility within the Korean Classroom
           i.fas.fa-external-link-alt
-      td.schedule-speaker Art Mesa
+      td.schedule-speaker Nathalie Calderon
       td.schedule-venue 103
     tr.room2
       td.schedule-track Motivation
