--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -21,7 +21,7 @@ block content
             p.speaker-data 
               //- span= speaker.topic
               //- span= speaker.subtopic
-              span.speaker-track= speaker.track
+              span.speaker-track(class=speaker.track)= speaker.track
               | &nbsp;&bull;&nbsp;
               span.speaker-room= speaker.room 
               | &nbsp;&bull;&nbsp;
